--- a/Python/06_sequences/c)_sets.ipynb
+++ b/Python/06_sequences/c)_sets.ipynb
@@ -120,7 +120,8 @@
    "id": "5b10dbae",
    "metadata": {},
    "source": [
-    "#### except"
+    "#### except\n",
+    "- excluding"
    ]
   },
   {
